# pysquel

./: .gitignore  README.md  pyproject.toml
src/pysquel/: __init__.py  analyzer.py  cli.py  linter.py
tests/: sample.py  test_analyzer.py  test_lint.py  test_lint_file.py
