[tool.poetry]
name = "pysquel"
version = "0.1.0"
description = ""
authors = ["petr.prikryl <petr.prikryl@olc.cz>"]
packages = [
    {include = "pysquel", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.11"
sqlfluff = "^2.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
