[tool.poetry]
name = "pysquel"
version = "0.0.1"
description = ""
authors = ["petr.prikryl <nich@seznam.cz>"]
readme = "README.md"
packages = [
    {include = "pysquel", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.11"
sqlfluff = "^2.3.5"
typer = "^0.9.0"

[tool.poetry.scripts]
pysquel = 'pysquel.cli:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
